This probably works

--- a/gui/kivy/uix/ui_screens/receive.kv
+++ b/gui/kivy/uix/ui_screens/receive.kv
@@ -42,7 +42,7 @@ ReceiveScreen:
             size_hint: 1, None
             height: '48dp'
             opacity: 0.5 if qr.shaded else 1
-            text: _('Bitcoin Address') + ': ' + s.address
+            text: _('Lbry Address') + ': ' + s.address
             text_size: self.width, None
 
         SendReceiveBlueBottom:
